release/helloworld.yaml
---
# Source: helloworld/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-app-service
  namespace: services
  labels:
    env: prd
spec:
  selector:
    app: helloworld
  ports:
    - name: http-helloworld
      protocol: TCP
      port: 80
      targetPort: 8080
---
# Source: helloworld/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-app-deployment
  namespace: services
  labels:
    env: prd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: paulbouwer/hello-kubernetes:1.10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.kubernetes.io/nodegroup
                    operator: In
                    values:
                      - app
---
# Source: helloworld/templates/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-app-destination-rule
  namespace: services
  labels:
    env: prd
spec:
  host: helloworld-app-service.app.svc.cluster.local
  exportTo:
    - "."
---
# Source: helloworld/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-app-gateway
  namespace: services
  labels:
    env: prd
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http-helloworld
        number: 80
        protocol: HTTP
      hosts:
        - "*"
---
# Source: helloworld/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: services
  name: helloworld-app-virtual-service
  labels:
    env: prd
spec:
  exportTo:
    - "."
  hosts:
    - "*"
  gateways:
    - helloworld-app-gateway
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: helloworld-app-service.app.svc.cluster.local
            port:
              number: 80
